:art: changed backend template

--- a/.env.template
+++ b/.env.template
@@ -8,8 +8,6 @@ LOG_LEVEL=DEBUG
 JSON_LOGS=False
 
 # db
-POSTGRES_DB=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-BACKEND_DATABASE_HOST=db
-BACKEND_DATABASE_PORT=5432
+DATABASE_URL=postgresql+asyncpg://postgres:postgres@db:5432/postgres
