--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,7 +18,7 @@ repos:
     hooks:
         - id: mypy
           language: system
-          args: [--python-version=3.10]
+          args: [--config-file=backend/.mypy.ini]
 
 -   repo: https://gitlab.com/pycqa/flake8
     rev: 4.0.1
