--- a/backend/.mypy.ini
+++ b/backend/.mypy.ini
@@ -1,33 +1,31 @@
 [mypy]
-python_version = 3.10
 mypy_path=backend/
-plugins = pydantic.mypy, loguru_mypy, sqlmypy, sqlalchemy.ext.mypy.plugin
+python_version = 3.10
+plugins = pydantic.mypy, loguru_mypy, sqlmypy
+exclude = migrations/env.py
 
-disallow_any_unimported = True
-show_error_context = False
-show_column_numbers = True
-allow_redefinition = False
-check_untyped_defs = True
-disallow_untyped_decorators = True
-disallow_any_explicit = False
-disallow_any_generics = False
-disallow_untyped_calls = True
-disallow_untyped_defs = True
-disallow_incomplete_defs = True
-ignore_errors = False
-ignore_missing_imports = False
-local_partial_types = True
-strict_optional = True
-strict_equality = True
-no_implicit_optional = True
-warn_unused_ignores = True
-warn_redundant_casts = True
-warn_unused_configs = True
-warn_unreachable = True
-warn_no_return = True
-
-[mypy-punq.*]
-ignore_missing_imports = True
+disallow_any_unimported = true
+show_error_context = false
+show_column_numbers = true
+allow_redefinition =false
+check_untyped_defs = true
+disallow_untyped_decorators = true
+disallow_any_explicit = false
+disallow_any_generics = false
+disallow_untyped_calls = true
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
+ignore_errors = false
+ignore_missing_imports = false
+local_partial_types = true
+strict_optional = true
+strict_equality = true
+no_implicit_optional = true
+warn_unused_ignores = true
+warn_redundant_casts = true
+warn_unused_configs = true
+warn_unreachable = true
+warn_no_return = true
 
 [pydantic-mypy]
 init_forbid_extra = True
@@ -43,5 +41,5 @@ ignore_errors = True
 
 [tool.mypy]
 exclude = [
-    "migrations/env.py"
+   "migrations/env.py"
 ]
