--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -18,4 +18,4 @@ RUN pip install --no-cache-dir --upgrade -r /backend/requirements.txt
 
 COPY . /backend
 
-CMD ["uvicorn", "application.web.main:app", "--reload", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "main:app", "--reload", "--host", "0.0.0.0", "--port", "8000"]
