--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -2,7 +2,7 @@
 
 [alembic]
 # path to migration scripts
-script_location = repository/database/migrations
+script_location = migrations
 
 # template used to generate migration files
 # file_template = %%(rev)s_%%(slug)s
@@ -49,6 +49,8 @@ version_path_separator = os  # default: use os.pathsep
 # the output encoding used when revision files
 # are written from script.py.mako
 # output_encoding = utf-8
+
+sqlalchemy.url = postgresql+asyncpg://postgres:postgres@db:5432/postgres
 
 
 [post_write_hooks]
