--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "backend"
 version = "0.1.0"
-description = "Product Catalog"
+description = "Template for FastAPI microservice"
 authors = ["Anton Ivanov"]
 
 [tool.poetry.dependencies]
@@ -13,10 +13,8 @@ uvicorn = "^0.17.6"
 httpx = "0.21.3"
 asyncpg =  "^0.25.0"
 loguru = "^0.6.0"
+sqlmodel = "^0.0.6"
 pytest = "^7.1.2"
-punq = "^0.6.2"
-SQLAlchemy-Utils = "^0.38.2"
-python-dotenv = "^0.20.0"
 
 [tool.poetry.dev-dependencies]
 
