:sparkles: added glafbuh_parser

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,13 +8,11 @@ authors = ["Anton Ivanov"]
 python = "^3.10"
 fastapi = "^0.75.2"
 pydantic = "^1.9.0"
-alembic = "^1.7.7"
 uvicorn = "^0.17.6"
-httpx = "0.21.3"
-asyncpg =  "^0.25.0"
 loguru = "^0.6.0"
-sqlmodel = "^0.0.6"
 pytest = "^7.1.2"
+selenium = "^4.5.0"
+bs4 = "^0.0.1"
 
 [tool.poetry.dev-dependencies]
 
