--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,6 +13,7 @@ loguru = "^0.6.0"
 pytest = "^7.1.2"
 selenium = "^4.5.0"
 bs4 = "^0.0.1"
+requests = "^2.28.1"
 
 [tool.poetry.dev-dependencies]
 
