--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "backend"
 version = "0.1.0"
-description = "Template for FastAPI microservice"
-authors = ["Anton Ivanov"]
+description = "News recomentational system microservice"
+authors = ["Anton Ivanov", "Mikhail Semin", "Pavel Korniychuk", "Alexander Shalnov"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -14,6 +14,12 @@ pytest = "^7.1.2"
 selenium = "^4.5.0"
 bs4 = "^0.0.1"
 requests = "^2.28.1"
+pandas = "^1.5.0"
+numpy = "^1.23.3"
+scikit-learn = "^1.1.2"
+nltk = "^3.7"
+pymorphy2 = "^0.9.1"
+natasha = "^1.4.0"
 
 [tool.poetry.dev-dependencies]
 
